tests/ui/async-await/in-trait/generics-mismatch.next.stderr
error[E0053]: method `foo` has an incompatible generic parameter for trait `Foo`
  --> $DIR/generics-mismatch.rs:13:18
   |
LL | trait Foo {
   |       ---
LL |     async fn foo<T>();
   |                  - expected type parameter
...
LL | impl Foo for () {
   | ---------------
LL |     async fn foo<const N: usize>() {}
   |                  ^^^^^^^^^^^^^^ found const parameter of type `usize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0053`.
